# juntotechnologies.github.io

./: .gitignore  .nojekyll  404.html  CNAME  README.md  _quarto.yaml  _site.yml  contact 2.html  contact.Rmd  contact.html  contact.knit 2.md  contact.knit 3.md  contact.knit 7.md  contact.qmd  docusaurus.config.js  index 2.html  index.Rmd  index.html  index.qmd  listings.json  package-lock 2.json  package-lock.json  package.json  pyproject.toml  robots.txt  search.json  server.js  services 2.html  services.Rmd  services.html  services.knit 4.md  sitemap.xml  styles.css  team 2.html  team.Rmd  team.html  team.knit 7.md  team.qmd  team_2.Rmd  team_2.html  (+1 more)
.github/workflows/: deploy.yml  quarto-publish.yaml
_site/: index.html  listings.json  search 2.json  search.json  services.html  styles 2.css  team.html
_site/pages/: contact.html  index.html  services.html  team.html
assets/js/: 0058b4c6.0a00e93c.js  0058b4c6.0cb95278.js  01a85c17.4adb5fd8.js  01a85c17.83afd087.js  0e384e19.461bd772.js  0e384e19.e2494b1f.js  14eb3368.d0810682.js  1538.cf4a9360.js  17896441.541543a3.js  17896441.f8bb098b.js  18c41134.39df3763.js  1dea6ca3.8837acdc.js  1e4232ab.5256db61.js  1f391b9e.617e0c0a.js  1f391b9e.9f582ad0.js  2237.580d7f2b.js  237.ccf25534.js  2adea3ad.3fa4a586.js  2adea3ad.f1249415.js  (+103 more)
blog/: atom.xml  index.html  rss.xml
components/: 3d-demo.html  footer 2.html  footer.html  generic-content.html  header.html  home-content.html  nav.html  team.html
markdown-page/: index.html
pages/: contact.html  index.html  index.qmd  services.html  team.html  team.qmd
(+40 files in other folders)
