[project]
name = "juntotechnologies-github-io"
version = "0.1.0"
description = ""
authors = [{ name = "Shaun Porwal", email = "shaun.porwal@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.poetry]
packages = [{ include = "juntotechnologies" }]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
